# SshUmdLoader

./: .gitignore  .hgignore  CMakeLists.txt  DesignDocument.md  Prompt.md  SshUmdLoader-example.ini  report.md
include/SshUmdLoader/: Composition.h  Domain.h  Infrastructure.h  Ports.h  UseCases.h
src/: main.cpp
src/Core/: Domain.cpp  UseCases.cpp
src/Infrastructure/: Adapters.cpp
tests/: CoreSmokeTest.cpp
